[package]
name = "image-debug-utils"
version = "0.1.0"
edition = "2024"
license = "MIT"
[lib]
path = "src/lib.rs"

[dependencies]
image = "0.25"
imageproc = "0.26"
palette = { version = "0.7", default-features = false, features = ["std"] }
num-traits = "0.2"
num = "0.4"


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
